<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="calendar_view">calendar view</string>
    <string name="service_demo">service demo</string>
    <string name="alarm_demo">alarm_demo</string>service_demo
    <string name="swipe_demo">swipe demo</string>
    <string name="schedule_demo">schedule demo</string>
    <string name="animate_demo">animate demo</string>
    <string name="draw_demo">draw demo</string>
    <string name="calendar_event">calendar event</string>
    <string name="file_select">file select</string>
    <string name="video_demo">video demo</string>
    <string name="music_demo">music demo</string>
    <string name="view_pager_demo">view pager demo</string>

    <string-array name="lunar_first_of_month">
        <item>春节</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>

    <string-array name="tradition_festival">
        <item>除夕</item>
        <item>0101春节</item>
        <item>0115元宵</item>
        <item>0505端午</item>
        <item>0707七夕</item>
        <item>0815中秋</item>
        <item>0909重阳</item>
    </string-array>

    <string-array name="lunar_str">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
    </string-array>

    <string-array name="solar_festival" tools:ignore="InconsistentArrays">
        <item>0101元旦</item>
        <item>0214情人节</item>
        <item>0308妇女节</item>
        <item>0312植树节</item>
        <item>0401愚人节</item>
        <item>0422地球日</item>
        <item>0501劳动节</item>
        <item>0504青年节</item>
        <item>0601儿童节</item>
        <item>0701建党节</item>
        <item>0801建军节</item>
        <item>0910教师节</item>
        <item>1001国庆节</item>
        <item>1225圣诞节</item>
    </string-array>

    <string-array name="solar_term">
        <item>春分</item>
        <item>清明</item>
        <item>谷雨</item>
        <item>立夏</item>
        <item>小满</item>
        <item>芒种</item>
        <item>夏至</item>
        <item>小暑</item>
        <item>大暑</item>
        <item>立秋</item>
        <item>处暑</item>
        <item>白露</item>
        <item>秋分</item>
        <item>寒露</item>
        <item>霜降</item>
        <item>立冬</item>
        <item>小雪</item>
        <item>大雪</item>
        <item>冬至</item>
        <item>小寒</item>
        <item>大寒</item>
        <item>立春</item>
        <item>雨水</item>
        <item>惊蛰</item>
    </string-array>

    <string-array name="special_festivals">
        <item>母亲节</item>
        <item>父亲节</item>
        <item>感恩节</item>
    </string-array>

    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="expand_view_demo">expand view demo</string>
    <string name="morning">早上</string>
    <string name="button">button</string>
    <string name="dialog_demo">dialog demo</string>
    <string name="guide_demo">guide demo</string>
    <string name="text_have">有</string>
    <string name="text_none">无</string>
    <string name="efficacy_demo">efficacy demo</string>
    <string name="tcp_demo">tcp demo</string>
    <string name="bar_chart">bar chart</string>
    <string name="line_chart">line chart</string>
    <string name="recycler_demo">recycler demo</string>
    <string name="camera_demo">camera demo</string>
    <string name="restart_app">restart app</string>
    <string name="button1">button1</string>
    <string name="smart_table">smart_table_demo</string>
    <string name="baidu_map_demo">baidu map demo</string>
    <string name="retrofit_demo">retrofit demo</string>
    <string name="edit_text_demo">edit text demo</string>
    <string name="zxing_demo">zxing demo</string>
    <string name="send_email">send email</string>
    <string name="video_record_demo">video_record_demo</string>
    <string name="download_app">download_app</string>
    <string name="gps">gps</string>
    <string name="data_base">data_base</string>
    <string name="add">add</string>
    <string name="add_record">add_record</string>
    <string name="add_user">add_user</string>
    <string name="save_file">save_file</string>
    <string name="insert">增</string>
    <string name="delete">删</string>
    <string name="modify">改</string>
    <string name="query">查</string>

</resources>
