<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    android:orientation="vertical"
    tools:context=".database.DataBaseActivity">

    <TextView
        android:id="@+id/insert"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="4sp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/insert"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="4sp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/delete"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/modify"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="4sp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/modify"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/query"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="4sp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/query"
        android:textSize="20sp" />

</LinearLayout>